--- a/tea-cozy/style.css
+++ b/tea-cozy/style.css
@@ -6,6 +6,7 @@ body {
 	opacity: 0.9;
 	text-align: center;
 }
+
 header {
 	width: 100%;
 	height: 69px;
@@ -17,18 +18,22 @@ header {
 	justify-content: space-between;
 	border-bottom: 1px solid seashell;
 }
+
 a {
 	color: seashell;
 	margin: 0 10px;
 }
+
 #logo {
 	height: 50px;
 	padding-left: 10px;
 }
+
 nav {
 	justify-content: right;
 	margin-right: 20px;
 }
+
 .jumbotron {
 	background-image: url('/images/img-mission-background.jpg');
 	height: 700px;
@@ -37,17 +42,22 @@ nav {
 	margin: 0px auto;
 	align-items: center;
 }
+
 .mission {
 	background-color: black;
 	width: 100%;
 }
-.mission h4{
+
+.mission h4 {
 	margin: 10px;
 }
+
 .products {
 	width: 1000px;
-	margin: 50px auto; /* Marge op t oog want niet gespecificeerd*/
+	margin: 50px auto;
+	/* Marge op t oog want niet gespecificeerd*/
 }
+
 .products-container {
 	display: flex;
 	flex-wrap: wrap;
@@ -59,13 +69,16 @@ nav {
 .products figure {
 	margin: 10px;
 }
+
 .products img {
 	height: 200px;
 	width: 300px;
 }
+
 .products figcaption {
 	margin-top: 10px;
 }
+
 .products h2,
 .products h4 {
 	margin: 10px;
@@ -81,25 +94,31 @@ nav {
 	justify-content: center;
 	align-items: center;
 }
+
 .locations-container {
 	display: flex;
 	align-content: center;
 	justify-content: center;
 }
+
 .locations h2 {
 	margin: 0 0 15px 0;
 }
+
 .locations-card {
 	width: 300px;
 	background-color: black;
 	margin: 00px 20px;
 }
+
 .contact {
 	height: 200px;
 }
+
 .contact h2 {
 	margin: 10px;
 }
+
 footer {
 	text-align: left;
 	margin-left: 20px;
